--- a/2021_b/3Номер html/l.html
+++ b/2021_b/3Номер html/l.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Gosho</title>
-		<meta name="viewport" content="width=450px, initial-scale=1.0">
+		<meta name="viewport" content="width=display-width, initial-scale=1.0">
 				<style>
 					.gooool {float:center;margin-top:-340px;margin-left:400px}
 					.ford {margin-right:300px}
