--- a/2021_b/3Номер html/l.html
+++ b/2021_b/3Номер html/l.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Gosho</title>
-		<meta name="viewport" content="width=display-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 				<style>
 					.gooool {float:center;margin-top:-340px;margin-left:400px}
 					.ford {margin-right:300px}
@@ -18,7 +18,7 @@
 			<p><strong>Форд</strong> са <em>най-добрите</em></p>
 			<p>The Ford Motor Company is an American multinational automaker headquartered in Dearborn,<br> Michigan, a suburb of Detroit. It was founded by Henry Ford and incorporated on June 16, 1903.</p>
 		<div class="gooool">
-			<p 	class="image"><a href="http://www.ford.com/	"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Ford_Motor_Company_Logo.svg/1200px-Ford_Motor_Company_Logo.svg.png" alt="Smiley face" height="300" width="700"></a>	</p>
+			<p class="image"><a href="http://www.ford.com/	"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Ford_Motor_Company_Logo.svg/1200px-Ford_Motor_Company_Logo.svg.png" alt="Smiley face" height="auto" width="100%"></a></p>
 	  </div>
 	</body>
 </html>
