--- a/2021_b/3Номер html/l.html
+++ b/2021_b/3Номер html/l.html
@@ -18,7 +18,7 @@
 			<p><strong>Форд</strong> са <em>най-добрите</em></p>
 			<p>The Ford Motor Company is an American multinational automaker headquartered in Dearborn,<br> Michigan, a suburb of Detroit. It was founded by Henry Ford and incorporated on June 16, 1903.</p>
 		<div class="gooool">
-			<p class="image"><a href="http://www.ford.com/	"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Ford_Motor_Company_Logo.svg/1200px-Ford_Motor_Company_Logo.svg.png" alt="Smiley face" height="auto" width="auto"></a></p>
+			<p class="image"><a href="http://www.ford.com/	"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Ford_Motor_Company_Logo.svg/1200px-Ford_Motor_Company_Logo.svg.png" alt="Smiley face" height="160" width="400"></a></p>
 	  </div>
 	</body>
 </html>
