--- a/2021_b/3Номер html/l.html
+++ b/2021_b/3Номер html/l.html
@@ -6,19 +6,36 @@
 		<title>Gosho</title>
 		<meta name="viewport" content="width=auto, initial-scale=1.0">
 				<style>
-					.gooool {float:center;margin-top:-340px;margin-left:400px}
+				.button {
+									background-color: #4CAF50; /* Green */
+									border: none;
+									color: white;
+									padding: 15px 10	px;
+									text-decoration: inherit;
+									display: run-in;
+									font-size: 20px;
+									margin: 100px 100px 500px -400px;
+									cursor: pointer;
+}
+					.gooool {float:center;margin-top:-550px;margin-left:350px;}
+					.gooooll {float:center;margin-top:-360px;margin-left:400px}
 					.ford {margin-right:300px}
 				</style>
 				<link rel="stylesheet" href="style.css">
+				<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	</head>
 	<body>
 		<div class="ford">
 			<h1>Форд</h1>
 		</div>
+
 			<p><strong>Форд</strong> са <em>най-добрите</em></p>
-			<p>The Ford Motor Company is an American multinational automaker headquartered in Dearborn,<br> Michigan, a suburb of Detroit. It was founded by Henry Ford and incorporated on June 16, 1903.</p>
+			<p>The Ford Motor Company is an American multinational automaker<br> headquartered in Dearborn, Michigan, a suburb of Detroit.<br> It was founded by Henry Ford and incorporated on June 16, 1903.</p>
+		<div class="gooooll">
+			<button class="button"><a href="index.html">Gallery</button>
+		</div>
 		<div class="gooool">
-			<p class="image"><a href="http://www.ford.com/	"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Ford_Motor_Company_Logo.svg/1200px-Ford_Motor_Company_Logo.svg.png" alt="Smiley face" height="160" width="400"></a></p>
+			<p class="image"><a href="http://www.ford.com/	"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Ford_Motor_Company_Logo.svg/1200px-Ford_Motor_Company_Logo.svg.png" alt="Smiley face" height="160" width="400"></a>	</p>
 	  </div>
 	</body>
 </html>
