--- a/2021_b/3Номер html/l.html
+++ b/2021_b/3Номер html/l.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Gosho</title>
-		<meta name="viewport" content="width=auto, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 				<style>
 					.button {
 					 	background-color: #4CAF50; /* Green */
