--- a/2021_b/3Номер html/l.html
+++ b/2021_b/3Номер html/l.html
@@ -4,15 +4,24 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Gosho</title>
-		
+		<meta name="viewport" content="width=auto, initial-scale=1.0">
 				<style>
-					
-					.gooool {float:center;margin-top:-550px;margin-left:350px;}
-					.gooooll {float:center;margin-top:-360px;margin-left:400px}
+					table, th, td {
+											 	 border: 4px solid red;
+											 	 padding: 10px;
+												 margin: 90px;
+												 shape-margin: 10px
+												 border-style: groove;
+										 	  }
+			    table {
+								 border-spacing: 15px;
+								 color: white;
+							 	}
+					.gooool {float:center;margin-top:-280px;margin-left:400px;}
 					.ford {margin-right:300px}
-			       </style>
-			       <link rel="stylesheet" href="style.css">
-			       <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+				</style>
+				<link rel="stylesheet" href="style.css">
+				<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	</head>
 	<body>
 		<div class="ford">
@@ -21,9 +30,36 @@
 
 			<p><strong>Форд</strong> са <em>най-добрите</em></p>
 			<p>The Ford Motor Company is an American multinational automaker<br> headquartered in Dearborn, Michigan, a suburb of Detroit.<br> It was founded by Henry Ford and incorporated on June 16, 1903.</p>
-		
 		<div class="gooool">
 			<p class="image"><a href="http://www.ford.com/	"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Ford_Motor_Company_Logo.svg/1200px-Ford_Motor_Company_Logo.svg.png" alt="Smiley face" height="160" width="400"></a>	</p>
-	 	</div>
+	  </div>
+		<table style="width:50%">
+  		<tr>
+    		<th>Model</th>
+    		<th>Max. Km/h</th>
+    		<th>price</th>
+  	  </tr>
+  		<tr>
+    		<td>FORD GT</td>
+    		<td>347</td>
+    		<td>454,000$</td>
+  		</tr>
+  		<tr>
+    		<td>FORD Mustang</td>
+    		<td>300</td>
+    		<td>25,000$</td>
+  		</tr>
+  		<tr>
+    		<td>FORD Taunus</td>
+    		<td>7,000$</td>
+    		<td>128</td>
+  		</tr>
+		</table>
+		<div>
+				<p>Аз съм Александър Радевски и знам, че това което правя не е само за мен.
+				<br>В този "сайт" ще намерите или поне се надявам да намерите интересна,<br> а може и фондаментална информация,
+						ако искате да купите "FORD".</p>
+		</div>
+
 	</body>
 </html>
