--- a/2021_b/3Номер html/l.html
+++ b/2021_b/3Номер html/l.html
@@ -6,6 +6,7 @@
 		<title>Gosho</title>
 		<meta name="viewport" content="width=auto, initial-scale=1.0">
 				<style>
+
 					table, th, td {
 											 	 border: 4px solid red;
 											 	 padding: 10px;
@@ -60,6 +61,7 @@
 				<br>В този "сайт" ще намерите или поне се надявам да намерите интересна,<br> а може и фондаментална информация,
 						ако искате да купите "FORD".</p>
 		</div>
-
+		<p class="images"><a href="https://en.wikipedia.org/wiki/Ford_Taunus"><img src="http://carphotos.cardomain.com/ride_images/4/457/709/38640354030_original.jpg?v=1" alt="Taunus" hight="130" width="170"></a></p>
+		<p class="Taunus">Ford taunus</p>
 	</body>
 </html>
