--- a/2021_b/3Номер html/l.html
+++ b/2021_b/3Номер html/l.html
@@ -24,7 +24,7 @@
 				<link rel="stylesheet" href="style.css">
 				<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	</head>
-	<body background="https://thumbs.dreamstime.com/z/wax-crayon-hand-drawing-background-abstract-35695769.jpg">
+	<body background="http://c8.alamy.com/comp/BN77ME/black-2005-2006-ford-gt-supercar-sports-car-isolated-with-clipping-BN77ME.jpg">
 	      	style="background-size:cover
 		
 		<div class="ford">
