--- a/2021_b/3Номер html/l.html
+++ b/2021_b/3Номер html/l.html
@@ -3,16 +3,17 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Gosho</title>
-		<meta name="viewport" content="width=auto, initial-scale=1.0">
+		<title>Gosho Forda</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 				<style>
 
-					table, th, td {
+				table, th, td {
 											 	 border: 4px solid red;
 											 	 padding: 10px;
 												 margin: 90px;
 												 shape-margin: 10px
 												 border-style: groove;
+
 										 	  }
 			    table {
 								 border-spacing: 15px;
@@ -22,11 +23,9 @@
 					.ford {margin-right:300px}
 				</style>
 				<link rel="stylesheet" href="style.css">
-				<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+				<link rel="shortcut icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Ford_Motor_Company_Logo.svg/1200px-Ford_Motor_Company_Logo.svg.png">
 	</head>
-	<body background="http://c8.alamy.com/comp/BN77ME/black-2005-2006-ford-gt-supercar-sports-car-isolated-with-clipping-BN77ME.jpg">
-	      	
-		
+	<body>
 		<div class="ford">
 			<h1>Форд</h1>
 		</div>
@@ -54,8 +53,8 @@
   		</tr>
   		<tr>
     		<td>FORD Taunus</td>
-    		<td>7,000$</td>
     		<td>128</td>
+    		<td>7,000$</td>
   		</tr>
 		</table>
 		<div>
