--- a/2021_b/3Номер html/l.html
+++ b/2021_b/3Номер html/l.html
@@ -7,18 +7,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 				<style>
 
-				table, th, td {
-											 	 border: 4px solid red;
-											 	 padding: 10px;
-												 margin: 90px;
-												 shape-margin: 10px
-												 border-style: groove;
-
-										 	  }
-			    table {
-								 border-spacing: 15px;
-								 color: white;
-							 	}
+					table, th, td {
+							border: 4px solid red;
+							padding: 10px;
+							margin: 90px;
+							shape-margin: 10px
+							border-style: groove;
+}
+			    		table {
+				    		border-spacing: 15px;
+				    		color: white;
+}
 					.gooool {float:center;margin-top:-280px;margin-left:400px;}
 					.ford {margin-right:300px}
 				</style>
@@ -58,9 +57,8 @@
   		</tr>
 		</table>
 		<div>
-				<p>Аз съм Александър Радевски и знам, че това което правя не е само за мен.
-				<br>В този "сайт" ще намерите или поне се надявам да намерите интересна,<br> а може и фондаментална информация,
-						ако искате да купите "FORD".</p>
+			<p>Аз съм Александър Радевски и знам, че това което правя не е само за мен.
+			<br>В този "сайт" ще намерите или поне се надявам да намерите интересна,<br> а може и фондаментална информация,ако искате да купите "FORD".</p>
 		</div>
 		<p class="images"><a href="https://en.wikipedia.org/wiki/Ford_Taunus"><img src="http://carphotos.cardomain.com/ride_images/4/457/709/38640354030_original.jpg?v=1" alt="Taunus" hight="130" width="170"></a></p>
 		<p class="Taunus">Ford taunus</p>
