--- a/2021_b/3Номер html/l.html
+++ b/2021_b/3Номер html/l.html
@@ -62,90 +62,10 @@
 		</div>
 		<p class="images"><a href="https://en.wikipedia.org/wiki/Ford_Taunus"><img src="http://carphotos.cardomain.com/ride_images/4/457/709/38640354030_original.jpg?v=1" alt="Taunus" hight="130" width="170"></a></p>
 		<p class="Taunus">Ford taunus</p>
-		<p>dfwfwgwegajdgkjgopadlsjgowepl;gjadwos;lgjal;gjwaog<br>fweighweiogehwigjweaiklgjewaklgwejaiklgjaweiklgfjaw<br>
-		   <br>ou've got the words to change a nation
-		   <br>you're biting your tongue
-                   <br>ve spent a life time stuck in silence
-                   <br>id you'll say something wrong
-                   <br>o one ever hears it how we gonna learn your song? 
-                   <br>me, on come on
-                   Come on, come on
-		   You've got a heart as loud as lions
-		   So why let your voice be tamed?
-		   Baby we're a little different
-There's no need to be ashamed
-You've got the light to fight the shadows
-So stop hiding it away
-Come on, Come on
+		<p><br>Every car is unique by itselfs but FORD...
+		   <br>They are briliant!
+		   <brIf you wanna to search about
+			<br>them, jsut click the emblem up there</p>
 
-I wanna sing, I wanna shout
-I wanna scream till the words dry out
-So put it in all of the papers,
-I'm not afraid
-They can read all about it
-Read all about it oh
-Oh-oh-oh
-Oh-oh-oh
-Oh-oh-oh
-Oh-oh-oh
-Oh-oh-oh
-Oh-oh-oh
-
-At night we're waking up the neighbours
-While we sing away the blues
-Making sure that we remember yeah
-Cause we all matter too
-If the truth has been forbidden
-Then we're breaking all the rules
-So come on, come on
-Come on, come on,
-Let's get the tv and the radio
-To play our tune again
-It's 'bout time we got some airplay of our version of events
-There's no need to be afraid
-I will sing with you my friend
-Come on, come on
-
-I wanna sing, I wanna shout
-I wanna scream till the words dry out
-So put it in all of the papers,
-I'm not afraid
-They can read all about it
-Read all about it oh
-Oh-oh-oh
-Oh-oh-oh
-Oh-oh-oh
-Oh-oh-oh
-Oh-oh-oh
-Oh-oh-oh
-
-Yeah we're all wonderful, wonderful people
-So when did we all get so fearful?
-Now we're finally finding our voices
-So take a chance, come help me sing this
-Yeah we're all wonderful, wonderful people
-So when did we all get so fearful?
-And now we're finally finding our voices
-So take a chance, come help me sing this
-
-I wanna sing, I wanna shout
-I wanna scream till the words dry out
-So put it in all of the papers,
-I'm not afraid
-They can read all about it
-Read all about it oh
-Oh-oh-oh
-Oh-oh-oh
-Oh-oh-oh
-Oh-oh-oh
-Oh-oh-oh
-Oh-oh-oh
-
-I wanna sing, I wanna shout
-I wanna scream till the words dry out
-So put it in all of the papers,
-I'm not afraid
-They can read all about it
-Read all about it oh</p>
 	</body>
 </html>
