--- a/2021_b/3Номер html/l.html
+++ b/2021_b/3Номер html/l.html
@@ -64,7 +64,7 @@
 		<p class="Taunus">Ford taunus</p>
 		<p><br>Every car is unique by itselfs but FORD...
 		   <br>They are briliant!
-		   <brIf you wanna to search about
+		   <br>If you wanna to search about
 			<br>them, jsut click the emblem up there</p>
 
 	</body>
